--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ gretty {
 }
 
 repositories {
+    mavenLocal()
     jcenter()
     mavenCentral()
 }
@@ -40,7 +41,7 @@ dependencies {
     compile 'org.eclipse.persistence:eclipselink:2.6.2'
     compile 'org.postgresql:postgresql:9.4-1206-jdbc42'
     compile 'kr.pe.kwonnam.jsp:jsp-template-inheritance:0.3.RELEASE'
-    compile 'com.twilio.sdk:twilio:7.0.0-rc-29'
+    compile 'com.twilio.sdk:twilio:7.17.0'
 
     gretty 'ch.qos.logback:logback-classic:1.2.2'
     gretty 'ch.qos.logback:logback-access:1.2.2'
