--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ plugins {
     id 'checkstyle'
     id 'org.flywaydb.flyway' version '4.0.3'
     id 'org.akhikhl.gretty' version '1.2.4'
+    id 'co.uzzu.dotenv.gradle' version '1.2.0'
 }
 
 checkstyle {
@@ -55,9 +56,9 @@ dependencies {
 }
 
 flyway {
-    user = "$System.env.DB_USERNAME"
-    password = "$System.env.DB_PASSWORD"
-    url = "$System.env.JDBC_URL"
+    user = env.DB_USERNAME.value
+    password = env.DB_PASSWORD.value
+    url = env.JDBC_URL.value
 }
 
 //Change context path (base url). otherwise defaults to name of project
