--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     compile 'org.postgresql:postgresql:9.4-1206-jdbc42'
     compile 'kr.pe.kwonnam.jsp:jsp-template-inheritance:0.3.RELEASE'
     compile 'com.twilio.sdk:twilio:7.17.0'
+    compile 'io.github.cdimascio:dotenv-java:2.2.0'
 
     gretty 'ch.qos.logback:logback-classic:1.2.2'
     gretty 'ch.qos.logback:logback-access:1.2.2'
